...
        android:icon="@android:drawable/ic_menu_rotate" />
    <item
        android:id="@+id/createFragment"
        android:title="Create"
        android:icon="@android:drawable/ic_menu_add" />
    <item
        android:id="@+id/simulateFragment"
        android:title="Simulate"
        android:icon="@android:drawable/ic_menu_send" />
    <item
        android:id="@+id/settingsFragment"
        android:title="Settings"
        android:icon="@android:drawable/ic_menu_manage" />
...
